--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "@marplex/flarebase-auth",
-  "version": "1.2.0",
+  "name": "firebase-auth-cfworkers",
+  "version": "1.2.1",
   "description": "Firebase/Admin auth SDK for Cloudflare Workers",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Marplex/flarebase-auth"
+    "url": "https://github.com/divyam234/firebase-auth-cfworkers"
   },
   "license": "MIT",
-  "keywords": ["firebase","firebase sdk", "cloudflare worker", "cloudflare", "firebase auth"],
+  "keywords": [
+    "firebase",
+    "firebase sdk",
+    "cloudflare worker",
+    "cloudflare",
+    "firebase auth"
+  ],
   "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
@@ -22,7 +28,6 @@
     "test:lint": "eslint src --ext .ts",
     "test:prettier": "prettier \"src/**/*.ts\" --list-different",
     "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
-    "test:unit": "nyc --silent ava",
     "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
@@ -45,7 +50,8 @@
     "node": ">=10"
   },
   "dependencies": {
-    "jose": "^4.8.1"
+    "jose": "^4.8.1",
+    "redaxios": "^0.5.1"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
